# ndk_project

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/taxiao/cn/apple/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dream.aac
app/src/main/cpp/: CMakeLists.txt  android_log.h  javaListener.h  native-lib.cpp
app/src/main/java/com/taxiao/cn/apple/: Constant.java  FileUtils.java  LogUtils.java  MainActivity.java  OpenGLESActivity.java  OpenGLESImageActivity.java
app/src/main/java/com/taxiao/cn/apple/jni/: NativeMainJNI.java  com_taxiao_cn_apple_jni_NativeMainJNI.cpp  com_taxiao_cn_apple_jni_NativeMainJNI.h
app/src/main/java/com/taxiao/cn/apple/model/: Paramter.java
app/src/main/java/com/taxiao/cn/apple/opengl/: TXGLSurfaceImageView.java  TXGLSurfaceVideoView.java  TXGLSurfaceView.java  TXImageRender.java  TXRender.java  TXVideoRender.java
app/src/main/java/com/taxiao/cn/apple/util/: DialogUtils.java  DialogVideoSelectAdapter.java  FileUtils.java  LogUtils.java  ShaderUtils.java
app/src/main/java/com/taxiao/cn/apple/view/: TXGLSurfaceView.java  TXRender.java
app/src/main/res/layout/: activity_main.xml  activity_opengles.xml  activity_opengles_image.xml  adapter_dialog_video_select.xml  dialog_video_select.xml
app/src/main/res/raw/: fragment_image_shader.glsl  fragment_shader.glsl  fragment_shader1.glsl  fragment_video_mediacodec_shader.glsl  fragment_video_shader.glsl  vertex_image_matrix_shader.glsl  vertex_image_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/taxiao/cn/apple/: ExampleUnitTest.java
ffmpeg/: build.gradle
ffmpeg/src/androidTest/java/com/taxiao/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  Opensles_test.cpp  Opensles_test.h  TXAudio.cpp  TXAudio.h  TXBufferQueue.cpp  TXBufferQueue.h  TXCallBack.cpp  TXCallBack.h  TXCallJava.cpp  TXCallJava.h  TXError.h  TXFFmpeg.cpp  TXFFmpeg.h  TXPcmBean.cpp  TXPcmBean.h  TXPlayStatus.cpp  TXPlayStatus.h  TXQueue.cpp  TXQueue.h  TXVideo.cpp  TXVideo.h  android_build_all.sh  android_log.h  build_android.sh  javaListener.cpp  native-lib.cpp  thread_test.cpp  thread_test.h
ffmpeg/src/main/cpp/soundtouch/source/: STTypes.h
ffmpeg/src/main/cpp/test/: Opensles_test.cpp  Opensles_test.h  thread_test.h
ffmpeg/src/main/java/com/taxiao/ffmpeg/: JniSdkImpl.java
ffmpeg/src/main/java/com/taxiao/ffmpeg/utils/: Function.java  IFFmpegCompleteListener.java  IFFmpegCutAudioListener.java  IFFmpegDecodeVideoListener.java  IFFmpegErrorListener.java  IFFmpegGLSurfaceListener.java  IFFmpegParparedListener.java  IFFmpegRecordTimeListener.java  IFFmpegTimeListener.java  IFFmpegValumeDBListener.java  TXConstant.java  TXMediaCodecVideoUtil.java  TXMediacodecUtil.java  TXVideoSupportUitl.java  TimeInfoModel.java  XXPermissionsUtils.java
ffmpeg/src/test/java/com/taxiao/ffmpeg/: ExampleUnitTest.java
